# colivara-py

./: .coverage  .gitignore  README.md  coverage.xml  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish.yml  static.yml  test.yml
colivara_py/: __init__.py  async_client.py  client.py  models.py
docs/colivara_py/: async_client.md  client.md  index.md  models.md
site/colivara_py/: async_client.html  client.html  index.html  models.html
tests/: test_client.py  test_colivara_py.py
